--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@ body {
 }
 
 h1 {
+	padding: 1em;
 	color: white;
 	font-family: 'Calibri';
 	font-size: 4.5vw;
 	font-weight: 300;
+	border: 2px solid white;
+	border-radius: 50px;
+	transition: 0.2s all;
+}
+h1:hover {
+	transform: scale(1.2);
 }
