--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-*,*::before,*::after {
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 }
@@ -15,13 +17,14 @@ body {
 h1 {
 	padding: 1em;
 	color: white;
-	font-family: 'Calibri';
+	font-family: 'Calibri', sans-serif;
 	font-size: 4.5vw;
 	font-weight: 300;
 	border: 2px solid white;
 	border-radius: 100vw;
 	transition: 0.2s all;
 }
+
 h1:hover {
 	transform: scale(1.2);
 }
